--- a/pro.html
+++ b/pro.html
@@ -8,8 +8,8 @@
     <div class="header">
         <li><a href="">HOME</a></li>
         <li><a href="">GALLERY</a></li>
-        <li><a href="">ABOUT-US</a></li>
-        <li><a href="">CONTACT-US</a></li>
+        <li><a href="">ABOUT--US</a></li>
+        <li><a href="">CONTACT--US</a></li>
     </div>
 </body>
 </html>0
